--- a/mon-pix/app/templates/components/user-certifications-panel.hbs
+++ b/mon-pix/app/templates/components/user-certifications-panel.hbs
@@ -1,10 +1,11 @@
-{{!-- template-lint-disable no-implicit-this  --}}
-{{#if certifications}}
-  <div class="user-certifications-panel__certifications-list">
-    <CertificationsList @certifications={{certifications}} />
-  </div>
-{{else}}
-  <div class="user-certifications-panel__no-certification-panel">
-    <NoCertificationPanel />
-  </div>
-{{/if}}
+<div class="user-certifications-panel">
+  {{#if @certifications}}
+    <div class="user-certifications-panel__certifications-list">
+      <CertificationsList @certifications={{@certifications}} />
+    </div>
+  {{else}}
+    <div class="user-certifications-panel__no-certification-panel">
+      <NoCertificationPanel />
+    </div>
+  {{/if}}
+</div>
