--- a/mon-pix/app/styles/components/dashboard/_content.scss
+++ b/mon-pix/app/styles/components/dashboard/_content.scss
@@ -41,6 +41,7 @@
 
     &__certif {
       @include add-dashboard-content-separator();
+
       grid-area: 2 / 4 / 3 / 7;
       margin-bottom: 24px;
       height: 100%;
@@ -53,10 +54,11 @@
 
   @include device-is('large-screen') {
     grid-template-columns: repeat(4, 1fr);
-    padding: 0;
+    padding: 0 20px;
 
     &__banner {
       @include add-dashboard-content-separator();
+
       grid-area: 1 / 1 / 2 / 4;
     }
 
@@ -82,11 +84,37 @@
 
   &__section {
     @include add-dashboard-content-separator();
+
     padding: 24px 0;
 
     &:last-child {
       border-bottom: none;
     }
+  }
+}
+
+.dashboard-content-score {
+
+  &__wrapper {
+    display: flex;
+    background-color: $white;
+    border-radius: 10px;
+    padding: 19px 0;
+    box-shadow: 0 1px 0 0 rgba(23, 43, 77, 0.12);
+    flex-direction: column;
+    align-items: center;
+
+    @include device-is('large-screen') {
+      margin-left: 34px;
+      font-size: 0.8125rem;
+    }
+  }
+}
+
+.dashboard-content-score-wrapper {
+
+  &__button {
+    padding-top: 10px;
   }
 }
 
