[ORGA] added number of results in participation list

--- a/orga/app/components/routes/authenticated/campaign/assessment/list.hbs
+++ b/orga/app/components/routes/authenticated/campaign/assessment/list.hbs
@@ -3,6 +3,8 @@
   @selectedDivisions={{@selectedDivisions}}
   @selectedBadges={{@selectedBadges}}
   @selectedStages={{@selectedStages}}
+  @rowCount={{@participations.meta.rowCount}}
+  @resetFiltering={{@resetFiltering}}
   @triggerFiltering={{@triggerFiltering}}
 />
 
