--- a/orga/app/templates/authenticated/campaigns/campaign/assessments.hbs
+++ b/orga/app/templates/authenticated/campaigns/campaign/assessments.hbs
@@ -6,4 +6,5 @@
   @selectedDivisions={{this.divisions}}
   @selectedBadges={{this.badges}}
   @selectedStages={{this.stages}}
+  @resetFiltering={{this.resetFiltering}}
 />
