--- a/mon-pix/app/styles/components/_user-account-panel.scss
+++ b/mon-pix/app/styles/components/_user-account-panel.scss
@@ -3,13 +3,13 @@
   &__item {
     margin: 20px 0;
     display: flex;
-    align-items: center;
     align-content: flex-start;
     border-bottom: $grey-15 1px solid;
     padding-bottom: 1rem;
 
     &:last-child {
       border-bottom: none;
+      padding-bottom: 0;
     }
   }
 }
@@ -26,9 +26,12 @@
 
   &__button {
     margin-left: auto;
-  }
+    background-color: transparent;
+    color: $blue;
+    padding: 0 20px;
 
-  &__actions {
-    margin-left: auto;
+    &:hover {
+      background-color: transparent;
+    }
   }
 }
