--- a/mon-pix/app/templates/user-account.hbs
+++ b/mon-pix/app/templates/user-account.hbs
@@ -8,14 +8,23 @@
     <main>
       <div class="background-banner">
         <div class="user-account__banner">
-          <img src="{{rootURL}}/images/user-account/banner-icon.svg" class="user-tutorials-banner__icon" role="none" alt=""/>
           <h1 class="user-account-banner__title">{{t 'pages.user-account.title'}}</h1>
         </div>
       </div>
-
-      <div class="user-account__panel">
-        <UserAccountPanel @user={{@model}} />
+      {{#if this.isEmailEditionMode}}
+      <div class="user-account__update-email">
+        <UserAccountUpdateEmail
+                @user={{@model}}
+                @disableEmailEditionMode={{this.disableEmailEditionMode}}
+                @saveNewEmail={{this.saveNewEmail}}/>
       </div>
+      {{else}}
+      <div class="user-account__panel">
+        <UserAccountPanel
+                @user={{@model}}
+                @enableEmailEditionMode={{this.enableEmailEditionMode}}/>
+      </div>
+      {{/if}}
     </main>
 
     <Footer />
