[ADMIN] Replace anonymize by disable route

--- a/admin/app/components/user-detail-personal-information.hbs
+++ b/admin/app/components/user-detail-personal-information.hbs
@@ -191,6 +191,6 @@
 </section>
 
 <ConfirmPopup @message="Êtes-vous sûr de vouloir anonymiser cet utilisateur ? Ceci n’est pas réversible."
-              @confirm={{this.anonymizeUser}}
+              @confirm={{this.disableUser}}
               @cancel={{this.toggleDisplayConfirm}}
               @show={{this.displayConfirm}} />
