feat(admin): add publish button on publishable sessions list

--- a/admin/app/styles/app.scss
+++ b/admin/app/styles/app.scss
@@ -43,6 +43,7 @@
 @import 'components/organization-form';
 @import 'components/organization-information-section';
 @import 'components/pagination-control';
+@import 'components/publish-session-button';
 @import 'components/user-detail-personal-information-section';
 @import 'components/target-profiles/badge-list';
 @import 'components/target-profiles/details';
