--- a/admin/app/components/session-to-be-published-list.hbs
+++ b/admin/app/components/session-to-be-published-list.hbs
@@ -7,6 +7,7 @@
     @useNumericPagination={{true}}
     @multipleSelect={{true}}
     @pageSize={{25}}
-    @pageSizeValues={{this.pageValues}} />
+    @pageSizeValues={{this.pageValues}}
+  />
 
 </div>
