fix: display external link icon on one line in tablet/desktop

--- a/mon-pix/app/styles/components/_challenge-statement.scss
+++ b/mon-pix/app/styles/components/_challenge-statement.scss
@@ -19,6 +19,10 @@
     text-decoration: underline;
     color: $blue;
 
+    @include device-is('tablet') {
+      white-space: nowrap;
+    }
+
     &:active,
     &:focus,
     &:hover {
