a11y: remove unnecessary alt

--- a/mon-pix/app/templates/components/comparison-window.hbs
+++ b/mon-pix/app/templates/components/comparison-window.hbs
@@ -11,7 +11,8 @@
       <div class="comparison-window__title">
         <img class="comparison-window__result-icon comparison-window__result-icon--{{this.resultItem.status}}"
              src={{this.resultItemIcon}}
-             alt={{t this.resultItem.tooltip}}>
+             role="presentation"
+             alt="">
       </div>
       <h3 class="comparison-window__title-text">{{t this.resultItem.title}}</h3>
     </div>
