bsr: adjust role for tutorial panel

--- a/mon-pix/app/templates/components/tutorial-panel.hbs
+++ b/mon-pix/app/templates/components/tutorial-panel.hbs
@@ -10,7 +10,7 @@
           <div class="tutorial-panel__hint-picto-container">
             <img src="{{this.rootURL}}/images/comparison-window/icon-lampe.svg"
                  alt=""
-                 role="none"
+                 role="presentation"
                  class="tutorial-panel__hint-picto">
           </div>
           <MarkdownToHtml @class="tutorial-panel__hint-content" @markdown={{@hint}} />
