Glimmerize timeout jauge

--- a/mon-pix/app/templates/components/challenge-item-qcm.hbs
+++ b/mon-pix/app/templates/components/challenge-item-qcm.hbs
@@ -35,7 +35,7 @@
 
         {{#if this.displayTimer}}
           <div class="timeout-jauge-wrapper">
-            <TimeoutJauge @allotedTime={{@challenge.timer}} />
+            <TimeoutJauge @allottedTime={{@challenge.timer}} />
           </div>
         {{/if}}
       </div>
