--- a/mon-pix/app/templates/components/challenge-item-qroc.hbs
+++ b/mon-pix/app/templates/components/challenge-item-qroc.hbs
@@ -37,7 +37,7 @@
 
           {{#if this.displayTimer}}
             <div class="timeout-jauge-wrapper">
-              <TimeoutJauge @allotedTime={{@challenge.timer}} />
+              <TimeoutJauge @allottedTime={{@challenge.timer}} />
             </div>
           {{/if}}
         </div>
