[ORGA] Add English context on side menu and logout user (PIX-2160)

--- a/orga/app/components/user-logged-menu.hbs
+++ b/orga/app/components/user-logged-menu.hbs
@@ -23,6 +23,6 @@
   {{/each}}
   <Dropdown::ItemLink @linkTo="logout" class="logged-user-menu-item logged-user-menu-item__last">
       <FaIcon @icon="power-off" @class="logged-user-menu-item__icon"></FaIcon>
-      Se déconnecter
+      {{t 'navigation.user-logged-menu.logout'}}
   </Dropdown::ItemLink>
 </Dropdown::Content>
