--- a/orga/app/components/sidebar-menu.hbs
+++ b/orga/app/components/sidebar-menu.hbs
@@ -1,41 +1,41 @@
 <nav class="sidebar-menu">
   <LinkTo @route="authenticated.campaigns" class="sidebar-menu__item sidebar--padding-left sidebar--padding-right">
     <span class="sidebar--padding-right sidebar--item-icon">
-      <img src="{{this.rootURL}}/icons/chevron-square-right.svg" alt="Liste des campagnes">
+      <img src="{{this.rootURL}}/icons/chevron-square-right.svg" alt="" role="none">
     </span>
-    Campagnes
+    {{t 'navigation.main.campaigns' }}
   </LinkTo>
   {{#if this.currentUser.isSCOManagingStudents}}
     <LinkTo @route="authenticated.sco-students" class="sidebar-menu__item sidebar--padding-left sidebar--padding-right">
       <span class="sidebar--padding-right sidebar--item-icon">
-        <img src="{{this.rootURL}}/icons/address-book-light.svg" alt="Liste des élèves">
+        <img src="{{this.rootURL}}/icons/address-book-light.svg" alt="" role="none">
       </span>
-      Élèves
+      {{t 'navigation.main.students-sco' }}
     </LinkTo>
   {{/if}}
   {{#if this.currentUser.isSUPManagingStudents}}
     <LinkTo @route="authenticated.sup-students" class="sidebar-menu__item sidebar--padding-left sidebar--padding-right">
       <span class="sidebar--padding-right sidebar--item-icon">
-        <img src="{{this.rootURL}}/icons/address-book-light.svg" alt="Liste des étudiants">
+        <img src="{{this.rootURL}}/icons/address-book-light.svg" alt="" role="none">
       </span>
-      Étudiants
+      {{t 'navigation.main.students-sup' }}
     </LinkTo>
   {{/if}}
   {{#if this.currentUser.isAdminInOrganization}}
     <LinkTo @route="authenticated.team" class="sidebar-menu__item sidebar--padding-left sidebar--padding-right">
       <span class="sidebar--padding-right sidebar--item-icon">
-        <img class="icon-big" src="{{this.rootURL}}/icons/users-light.svg" alt="Liste des membres de l'organisation">
+        <img class="icon-big" src="{{this.rootURL}}/icons/users-light.svg" alt="" role="none">
       </span>
-      Équipe
+      {{t 'navigation.main.team' }}
     </LinkTo>
   {{/if}}
   {{#if this.documentationUrl}}
     <a class="sidebar-menu__item sidebar--padding-left sidebar--padding-right" href={{this.documentationUrl}}
        target="_blank" rel="noopener noreferrer">
       <span class="sidebar--padding-right sidebar--item-icon">
-        <img src="{{this.rootURL}}/icons/book-light.svg" alt="Documentation">
+        <img src="{{this.rootURL}}/icons/book-light.svg" alt="" role="none">
         </span>
-      Documentation
+      {{t 'navigation.main.documentation' }}
     </a>
   {{/if}}
 </nav>
