--- a/orga/app/templates/authenticated/campaigns/new.hbs
+++ b/orga/app/templates/authenticated/campaigns/new.hbs
@@ -1,6 +1,6 @@
 <div class="new-campaign-page">
 
-  <h1 class="page__title page-title">Création d'une campagne</h1>
+  <h1 class="page__title page-title">{{t 'pages.campaign-creation.title' }}</h1>
 
   <Routes::Authenticated::Campaign::New @campaign={{@model.campaign}} @targetProfiles={{@model.targetProfiles}} @createCampaign={{this.createCampaign}} @cancel={{this.cancel}} />
 </div>
