Redesign timeout-jauge mechanism

--- a/mon-pix/app/templates/components/timeout-jauge.hbs
+++ b/mon-pix/app/templates/components/timeout-jauge.hbs
@@ -4,7 +4,7 @@
       <img src={{this.imageSource}} alt="" role="none">
       <div>&nbsp;</div>
       <div class="timeout-jauge-remaining" data-spent="{{this.remainingSeconds}}">
-        {{this.remainingTime}}
+        {{this.formattedRemainingTime}}
       </div>
     </div>
     <div class="timeout-jauge-progress" style={{this.jaugeWidthStyle}}>
