Rename jauge to gauge across pix app

--- a/mon-pix/app/styles/components/_timed-challenge-instructions.scss
+++ b/mon-pix/app/styles/components/_timed-challenge-instructions.scss
@@ -43,7 +43,7 @@
 
 .timed-challenge-instructions-allocated-time {
 
-  &__jauge {
+  &__gauge {
     display: flex;
     flex-direction: row;
     justify-content: center;
