--- a/mon-pix/app/templates/components/challenge-item-qcm.hbs
+++ b/mon-pix/app/templates/components/challenge-item-qcm.hbs
@@ -34,8 +34,8 @@
         {{/if}}
 
         {{#if this.displayTimer}}
-          <div class="timeout-jauge-wrapper">
-            <TimeoutJauge @allottedTime={{@challenge.timer}} />
+          <div class="timeout-gauge-wrapper">
+            <TimeoutGauge @allottedTime={{@challenge.timer}} />
           </div>
         {{/if}}
       </div>
