--- a/mon-pix/app/styles/components/_timeout-gauge.scss
+++ b/mon-pix/app/styles/components/_timeout-gauge.scss
@@ -1,8 +1,8 @@
-.timeout-jauge-wrapper {
+.timeout-gauge-wrapper {
   padding-top: 0;
 }
 
-.timeout-jauge {
+.timeout-gauge {
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -12,7 +12,7 @@
   font-style: normal;
 }
 
-.timeout-jauge-container {
+.timeout-gauge-container {
   position: relative;
   z-index: 0;
   background-color: $grey-20;
@@ -22,7 +22,7 @@
   overflow: hidden;
 }
 
-.timeout-jauge-progress {
+.timeout-gauge-progress {
   position: absolute;
   left: 0;
   top: 0;
@@ -33,7 +33,7 @@
   height: 100%;
 }
 
-.timeout-jauge-clock {
+.timeout-gauge-clock {
   position: absolute;
   left: 0;
   top: 0;
