--- a/mon-pix/app/templates/components/challenge-item-qcu.hbs
+++ b/mon-pix/app/templates/components/challenge-item-qcu.hbs
@@ -35,8 +35,8 @@
         {{/if}}
 
         {{#if this.displayTimer}}
-          <div class="timeout-jauge-wrapper">
-            <TimeoutJauge @allottedTime={{@challenge.timer}} />
+          <div class="timeout-gauge-wrapper">
+            <TimeoutGauge @allottedTime={{@challenge.timer}} />
           </div>
         {{/if}}
       </div>
