Move icons to icons dir

--- a/mon-pix/app/templates/components/certifications-list-item.hbs
+++ b/mon-pix/app/templates/components/certifications-list-item.hbs
@@ -71,7 +71,7 @@
       </div>
 
       <div class="certifications-list-item__cell-double-width">
-        <img src="/images/sablier.svg" alt="" role="presentation" class="certifications-list-item__hourglass-img">
+        <img src="/images/icons/sablier.svg" alt="" role="presentation" class="certifications-list-item__hourglass-img">
         {{t "pages.certifications-list.statuses.not-published.title"}}
       </div>
       <div class="certifications-list-item__cell-pix-score"></div>
