a11y: remove no-duplicate-landmark rule
This rule causes issues to fix. It is often related to the duplication of
role="none/presentation" for an image in a component. Since we just have a
few warnings, we decided to add an exception to this rule.

--- a/mon-pix/app/components/routes/campaigns/restricted/user-information-form.hbs
+++ b/mon-pix/app/components/routes/campaigns/restricted/user-information-form.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable require-input-label no-duplicate-landmark-elements --}}
+{{!-- template-lint-disable require-input-label --}}
 <div class="join-restricted-campaign__row">
   <label class="join-restricted-campaign__label">{{t 'pages.join.fields.firstname.label'}}</label>
   <Input
