--- a/mon-pix/app/templates/components/certifications-list-item.hbs
+++ b/mon-pix/app/templates/components/certifications-list-item.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-duplicate-landmark-elements link-href-attributes --}}
+{{!-- template-lint-disable link-href-attributes --}}
 {{#if this.isPublishedAndRejected}}
   <CpPanel as |panel|>
     <panel.toggle @class="certifications-list-item__row-presentation" @role="tab">
