--- a/mon-pix/app/templates/components/form-textfield-date.hbs
+++ b/mon-pix/app/templates/components/form-textfield-date.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-implicit-this no-action no-curly-component-invocation require-input-label no-duplicate-landmark-elements --}}
+{{!-- template-lint-disable no-implicit-this no-action no-curly-component-invocation require-input-label --}}
 <label class="form-textfield__label">
   {{#if require}}<abbr title="{{t 'common.form.mandatory'}}" class="mandatory-mark">*</abbr> {{/if}}
   {{label}}
