--- a/mon-pix/app/templates/components/routes/register-form.hbs
+++ b/mon-pix/app/templates/components/routes/register-form.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-action no-duplicate-landmark-elements --}}
+{{!-- template-lint-disable no-action --}}
 <div class="register-form">
   <form {{action 'searchForMatchingStudent' on='submit'}}>
     <span class="register-form__required-inputs">{{t 'common.form.mandatory-fields' htmlSafe=true}}</span>
