--- a/mon-pix/app/templates/user-tutorials.hbs
+++ b/mon-pix/app/templates/user-tutorials.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-implicit-this no-duplicate-landmark-elements no-redundant-landmark-role --}}
+{{!-- template-lint-disable no-implicit-this no-redundant-landmark-role --}}
 {{page-title (t 'pages.user-tutorials.title')}}
 <BurgerMenu @animation="push" @translucentOverlay={{true}} as |burger|>
   <burger.outlet>
