--- a/mon-pix/app/templates/components/certification-results-page.hbs
+++ b/mon-pix/app/templates/components/certification-results-page.hbs
@@ -7,7 +7,7 @@
   {{#if this.notFinishedYet}}
 
     <div class="result-content__panel-picture">
-      <img src="{{@rootURL}}/images/flag.svg" alt={{t "pages.certification-results.flag-alt"}}>
+      <img src="{{@rootURL}}/images/illustrations/flag.svg" alt={{t "pages.certification-results.flag-alt"}}>
     </div>
     <div class="result-content__panel-title">
       {{t "pages.certification-results.not-finished.title"}}
