chore: glimmerize navbar-desktop-menu

--- a/mon-pix/app/templates/components/navbar-desktop-menu.hbs
+++ b/mon-pix/app/templates/components/navbar-desktop-menu.hbs
@@ -1,10 +1,11 @@
-{{!-- template-lint-disable no-implicit-this  --}}
-<div class="navbar-desktop-menu-links">
-  <ul class="navbar-desktop-menu-links__list">
-    {{#each menu as |item|}}
-      <li class="navbar-desktop-menu-links__item">
-        <LinkTo @route={{item.link}} class="navbar-desktop-menu-links__link {{item.class}}">{{item.name}}</LinkTo>
-      </li>
-    {{/each}}
-  </ul>
+<div class="navbar-desktop-menu">
+  <div class="navbar-desktop-menu-links">
+    <ul class="navbar-desktop-menu-links__list">
+      {{#each @menu as |item|}}
+        <li class="navbar-desktop-menu-links__item">
+          <LinkTo @route={{item.link}} class="navbar-desktop-menu-links__link {{item.class}}">{{item.name}}</LinkTo>
+        </li>
+      {{/each}}
+    </ul>
+  </div>
 </div>
