feat(admin): add component to display certified profile

--- a/admin/app/styles/app.scss
+++ b/admin/app/styles/app.scss
@@ -37,6 +37,7 @@
 @import 'components/certification-details-competence';
 @import 'components/certification-info-field';
 @import 'components/certification-list';
+@import 'components/certified-profile.scss';
 @import 'components/confirm-popup';
 @import 'components/member-item';
 @import 'components/menu-bar';
