--- a/admin/app/templates/authenticated/certifications/certification.hbs
+++ b/admin/app/templates/authenticated/certifications/certification.hbs
@@ -6,7 +6,7 @@
     Détails
   </LinkTo>
   <LinkTo @route="authenticated.certifications.certification.profile" @model={{@model.id}} class="navbar-item">
-    Profile
+    Profil
   </LinkTo>
 </nav>
 <section>
