--- a/admin/app/templates/authenticated/certifications/certification/profile.hbs
+++ b/admin/app/templates/authenticated/certifications/certification/profile.hbs
@@ -1,1 +1,4 @@
-<h1>{{@model.id}}</h1>
+<p>ID du compte Pix du candidat: {{@model.userId}}</p>
+<p>ID de la certification du candidat: {{@model.id}}</p>
+
+<Certification::CertifiedProfile @certifiedProfile={{@model}} />
