--- a/admin/app/templates/authenticated/tools.hbs
+++ b/admin/app/templates/authenticated/tools.hbs
@@ -14,7 +14,7 @@
         <p>Le référentiel de données pédagogique est mis à jour automatiquement quotidiennement (vers 6h00).</p>
         <p>Parfois, il peut s’avérer utile ou nécessaire de forcer le rechargement du référentiel.</p>
         <p>Ex : apparition d’une régression sur la plateforme (Pix API, Pix Editor, etc.)</p>
-        <div class="callout alert"><strong>Attention !</strong> Le rechargement du référentiel est une opération risquée. Il est recommandé de ne l’effectuer qu’en cas de force majeur, accompagné d’un développeur.</div>
+        <div class="callout alert"><strong>Attention !</strong> Le rechargement du référentiel est une opération risquée. Il est recommandé de ne l’effectuer qu’en cas de force majeure, accompagné d’un développeur.</div>
         <div class="callout info">Durée de l’opération : <strong>≈1mn</strong>.</div>
         {{#if this.isLoading}}
           <button type="button" disabled class="btn btn-primary btn-refresh-cache"><span class="loader-in-button">&nbsp;</span>
